# vidra-search

./: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
.github/workflows/: ci-guard.yml  openapi.yml  search-ci.yml  search-integration.yml  training-ci.yml
api/: openapi.yaml
cmd/api/: main.go
docs/: architecture.md  evaluation.md  operations.md  privacy.md
internal/api/: auth.go  auth_test.go  correlation.go  errors.go  handlers.go  health.go  openapi_contract_test.go  server.go
internal/cache/: cache.go  session.go  trending.go
migrations/: 0001_init_schema.down.sql  0001_init_schema.up.sql  0002_documents.down.sql  0002_documents.up.sql  0003_events_inbox.down.sql  0003_events_inbox.up.sql  0004_service_config.down.sql  0004_service_config.up.sql  0005_query_log.down.sql  0005_query_log.up.sql  0006_query_aggregates.down.sql  0006_query_aggregates.up.sql  0007_user_history.down.sql  0007_user_history.up.sql  0008_behavior_events.down.sql  0008_behavior_events.up.sql  0009_query_video_engagement.down.sql  0009_query_video_engagement.up.sql  0010_worker_cursors.down.sql  0010_worker_cursors.up.sql  0011_covisitation.down.sql  0011_covisitation.up.sql  0012_models.down.sql  0012_models.up.sql  0013_experiments.down.sql  0013_experiments.up.sql  0014_lower_title_trgm_index.down.sql  0014_lower_title_trgm_index.up.sql
training/: README.md  pyproject.toml  test_smoke.py  train_ranker.py
training/vidra_search_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+79 files in other folders)
